Cleanup based on lint recommendations.